# IntelRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PRD.md  README.md  Tasks.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  main.py
app/pages/: admin.py  chat.py  documents.py
config/: __init__.py  logging_config.py  settings.py
core/: __init__.py  audit.py  complexity_classifier.py  confidence.py  document_service.py  embedding_service.py  health.py  llm_service.py  prompt_builder.py  rag_service.py  retriever.py  schemas.py
core/cache/: cache_manager.py  redis_client.py
core/storage/: __init__.py  file_store.py  vector_store.py
docs/: SECURITY_REVIEW.md
docs/superpowers/plans/: 2026-03-26-intelrag-mvp.md
docs/superpowers/specs/: 2026-03-26-intelrag-mvp-enterprise-rag-design.md
ingestion/: __init__.py  chunker.py  pipeline.py
ingestion/parsers/: base.py  csv_parser.py  docx_parser.py  factory.py  html_parser.py  json_xml_parser.py  pdf_parser.py  pptx_parser.py  txt_parser.py
models/: __init__.py  db.py  session.py
tests/: __init__.py  conftest.py  test_cache_manager.py  test_cache_stub.py  test_chunker.py  test_complexity_classifier.py  test_confidence.py  test_file_store.py  test_health.py  test_llm_service.py  test_parsers.py  test_parsers_new.py  test_prompt_builder.py  test_retriever.py  test_schemas.py  test_settings.py  test_vector_store_protocol.py
utils/: __init__.py
web/: __init__.py  server.py
web/templates/: _assistant.html  _doc_list.html  _macros.html  admin.html  base.html  chat.html  documents.html
