[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelrag"
version = "0.1.0"
description = "Enterprise RAG AI platform with OpenRouter, caching, and Streamlit UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joev" }]
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2,<3.0",
    "openai>=1.12.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "fakeredis>=2.20.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
intelrag = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "ingestion*", "models*", "config*", "utils*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app", "core", "ingestion", "models", "config", "utils"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app", "core", "ingestion", "models", "config", "utils"]
omit = ["**/tests/*", "**/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
